fix: adjusted media ranges to prevent topbar overflow on linux firefox
adjusted media ranges around medium v. large viewports to move
breakpoint up fractionally
reduce font-size for hamburger menu

--- a/_sass/_03_settings_mixins_media_queries.scss
+++ b/_sass/_03_settings_mixins_media_queries.scss
@@ -251,8 +251,8 @@ $column-gutter: rem-calc(30) !default;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 $small-range: (0em, 40em);
-$medium-range: (40.063em, 64em);
-$large-range: (64.063em, 90em);
+$medium-range: (40.063em, 66em);
+$large-range: (66.063em, 90em);
 $xlarge-range: (90.063em, 120em);
 $xxlarge-range: (120.063em, 99999999em);
 
