--- a/_sass/foundation-components/_top-bar.scss
+++ b/_sass/foundation-components/_top-bar.scss
@@ -341,7 +341,7 @@ $topbar-dropdown-arrows: true !default; //Set false to remove the \00bb >> text 
             font-size: 0.65rem;
           }
           @media #{$screen} and (max-width: 64rem) {
-            font-size: $topbar-link-font-size;
+            font-size: 0.65rem;
           }
           font-weight: $topbar-link-weight;
           text-transform: $topbar-link-text-transform;
